<?xml version="1.0"?>
<package format="3">
  <name>lib_dynamixel</name>
  <version>3.7.60</version>
  <description>Bibliotheque controle dynamixel</description>
  <license>Apache 2.0</license>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/DynamixelSDK</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/DynamixelSDK/issues</url>
  <author email="willson@robotis.com">Will Son</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
